...
    override func viewDidLoad() {
        super.viewDidLoad()
        configureSheet()
        scrollView.isScrollEnabled = true
        scrollView.alwaysBounceVertical = true
        recommendCollectionView.isScrollEnabled = false
        view.accessibilityIdentifier = "DetailVC"
    }
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        scrollView.contentSize = contentView.frame.size
        scrollView.layoutIfNeeded() // 레이아웃 강제 적용
        xButton.layer.cornerRadius = xButton.frame.height / 2
...
