...
    private let alertView = UIView()
    private let titleLabel = UILabel() //제목?
    private let okButton = UIButton() // 확인버튼
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "CustomAlert"
        UIView.animate(withDuration: 0.2, delay: 0, options: .curveEaseInOut) { [weak self] in
            self?.alertView.transform = .identity
        }
        
    }
    override func setUpHierarchy() {
...
